--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "helmet": "^5.0.2"
+    "helmet": "^5.0.2",
+    "mongoose": "^6.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
