--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Esto es un ejemplo de un proyecto Mern Stack",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "start": "node dist/index.js",
     "test": "jest",
-    "serve:coverage": "npm run test && cd coverage/lcov-report && npx serve"
+    "serve:coverage": "npm run test && cd coverage/lcov-report && npx serve",
+    "build-prod": "npx webpack --mode production",
+    "build": "npx webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -26,13 +27,18 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.0.2",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
+    "tsoa": "^4.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.33",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "concurrently": "^7.1.0",
@@ -46,6 +52,7 @@
     "serve": "^13.0.2",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.2",
+    "ts-loader": "^9.3.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
