--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Esto es un ejemplo de un proyecto Mern Stack",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "swagger":"tsoa spec",
+    "dev": "concurrently \"npx tsc --watch\" \"npm run swagger\" \"nodemon -q dist/index.js\"",
     "start": "node dist/index.js",
     "test": "jest",
     "serve:coverage": "npm run test && cd coverage/lcov-report && npx serve",
