commited after too much time

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Esto es un ejemplo de un proyecto Mern Stack",
   "main": "index.js",
   "scripts": {
-    "swagger":"tsoa spec",
+    "swagger": "tsoa spec",
     "dev": "concurrently \"npx tsc --watch\" \"npm run swagger\" \"nodemon -q dist/index.js\"",
     "start": "node dist/index.js",
     "test": "jest",
@@ -24,19 +24,25 @@
   },
   "homepage": "https://github.com/Lugari/MernStackExample#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
     "tsoa": "^4.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.33",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
